<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateActivity" >

    <LinearLayout
        android:id="@+id/linearLayout_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp" >

        <ToggleButton
            android:id="@+id/toggleButton_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@drawable/togglebutton_custom"
            android:textOn="@string/label_collected" 
        	android:textOff="@string/label_collect"/>

        <ToggleButton
            android:id="@+id/toggleButton_reject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
        	android:background="@drawable/togglebutton_custom"
            android:textOn="@string/label_rejected"
            android:textOff="@string/label_reject" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout_buttons"
        android:layout_marginTop="70dp"
        android:text="@string/label_comment"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editText_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/linearLayout_buttons"
        android:layout_alignRight="@id/linearLayout_buttons"
        android:layout_below="@+id/textView_comment"
        android:ems="10"
        android:inputType="textMultiLine" >
    </EditText>

</RelativeLayout>