<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateActivity" >

        
    <TextView
        android:id="@+id/textView_labelSampleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:text="@string/label_sampleName"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editText_sampleName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView_labelSampleName"
        android:layout_alignStart="@id/textView_labelSampleName"
        android:layout_below="@id/textView_labelSampleName"
        android:singleLine="true"
        android:ems="10"
        android:hint="@string/hint_sampleName"
        android:imeOptions="actionNext">

        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/textView_labelSampleSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_labelSampleName"
        android:layout_alignStart="@+id/textView_labelSampleName"
        android:layout_below="@+id/editText_sampleName"
        android:layout_marginTop="15dp"
        android:text="@string/label_sampleSize"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editText_sampleSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView_labelSampleName"
        android:layout_alignStart="@id/textView_labelSampleName"
        android:layout_below="@+id/textView_labelSampleSize"
        android:ems="10"
        android:hint="@string/hint_sampleSize"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView_label_oversampleSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView_labelSampleName"
        android:layout_alignStart="@id/textView_labelSampleName"
        android:layout_below="@+id/editText_sampleSize"
        android:layout_marginTop="15dp"
        android:text="@string/label_oversampleSize"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editText_oversampleSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView_labelSampleName"
        android:layout_alignStart="@id/textView_labelSampleName"
        android:layout_below="@+id/textView_label_oversampleSize"
        android:ems="10"
        android:hint="@string/hint_oversampleSize"
        android:inputType="number" 
        android:imeOptions="actionDone"/>

    <TextView
        android:id="@+id/textView_labelStudyArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView_labelSampleName"
        android:layout_alignStart="@id/textView_labelSampleName"
        android:layout_below="@+id/editText_oversampleSize"
        android:layout_marginTop="15dp"
        android:text="@string/label_studyArea"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView_studyAreaFilename"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_labelStudyArea"
        android:layout_alignStart="@+id/textView_labelStudyArea"
        android:layout_alignRight="@+id/listView_fileNames"
        android:layout_alignEnd="@+id/listView_fileNames"
        android:layout_below="@+id/textView_labelStudyArea"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/label_studyAreaFilename"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ToggleButton
        android:id="@+id/toggleButton_appFolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView_labelStudyArea"
        android:layout_alignStart="@id/textView_labelStudyArea"
        android:layout_below="@id/textView_studyAreaFilename"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:background="@drawable/togglebutton_custom"
        android:textOff="@string/label_appFolder"
        android:textOn="@string/label_appFolder" />

    <ToggleButton
        android:id="@+id/toggleButton_SD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/toggleButton_appFolder"
        android:layout_alignStart="@+id/toggleButton_appFolder"
        android:layout_below="@+id/toggleButton_appFolder"
        android:layout_marginTop="10dp"
        android:background="@drawable/togglebutton_custom"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:textOff="@string/label_SD"
        android:textOn="@string/label_SD" />
        
    <ListView
        android:id="@+id/listView_fileNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/toggleButton_appFolder"
        android:layout_toRightOf="@id/toggleButton_SD"
        android:layout_toEndOf="@id/toggleButton_SD"
        android:background="@color/list_background" >
		<!-- "@android:color/background_light" -->
    </ListView>



</RelativeLayout>